# ce-library-wizard

./: .gitignore  CLAUDE.md  README.md  documentation-improvements.md  pyproject.toml  requirements.txt  run.sh  setup.py
.claude/commands/: commit.md
.github/workflows/: code-quality.yml
cli/: main.py  questions.py
core/: build_tester.py  c_handler.py  constants.py  cpp_handler.py  file_modifications.py  fortran_handler.py  git_operations.py  github_auth.py  go_handler.py  library_utils.py  models.py  rust_handler.py  subprocess_utils.py  ui_utils.py
docs/: README.md  advanced-usage.md  architecture.md  contributing.md  languages.md  quick-start.md  troubleshooting.md
