[tool.poetry]
name = "ce-lib-wizard"
version = "0.1.0"
description = "CLI tool to add libraries to Compiler Explorer"
authors = ["Compiler Explorer Contributors"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/compiler-explorer/ce-lib-wizard"
repository = "https://github.com/compiler-explorer/ce-lib-wizard"
keywords = ["compiler-explorer", "cli", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "cli" },
    { include = "core" }
]

[tool.poetry.scripts]
ce-lib-wizard = "cli.main:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
inquirer = "^3.2.0"
PyGithub = "^2.0.0"
colorama = "^0.4.6"
pydantic = "^2.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
pytype = "^2024.04.11"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytype]
python_version = "3.10"
inputs = [
    "cli/",
    "core/"
]
disable = [
    "import-error",
    "module-attr"
]